--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>PetStargram</h4>
-                        <p class="text-muted">PetStargram is a website that introduce you to the most popular animals on Instagram.</p>
+                        <p class="text-muted">PetStargram is a website that introduces you to the most popular animals on Instagram.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -157,7 +157,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>DwellWell</h4>
-                        <p class="text-muted">DwellWell is a simple chore dividing app, where it make it easy for the user and their roomates to divide, assign, and complete the chore list.</p>
+                        <p class="text-muted">DwellWell is a simple chore dividing app, that makes it easy for the users and their roomates to divide, assign, and complete the chore list.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -171,7 +171,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>FlyFreely</h4>
-                        <p class="text-muted">FlyFreely is an app where it picks out a random airport for you and gives you the price and flight information for the destination. Perfect for users who has the time, but needs help decide where to go.</p>
+                        <p class="text-muted">FlyFreely is an app that picks out a random airport for you and gives you the price and flight information for the destination. Perfect for users who have the time, but need help deciding where to go.</p>
                     </div>
                 </div>
       
@@ -224,7 +224,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <a href="mailto:alienk703@gmail.com"><h2 class="section-heading">Contact Andy</h2></a>
-                    <h3 class="section-subheading text-muted">I am currently looking for work in Washington DC Area. <br>If you are interested in my work, or just want to chat about cool things over a coffee,<br>contact me!</h3>
+                    <h3 class="section-subheading text-muted">I am currently looking for work in Washington DC Area. <br>If you are interested in my work, or just want to chat about cool things over coffee,<br>contact me!</h3>
                 </div>
             </div>
    
