--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Coffeeing</h4>
-                        <p class="text-muted">Coffeeing is an app that searches 10 nearby coffee shops from user input location. Need caffine? Lets Coffee it up!</p>
+                        <p class="text-muted">Coffeeing is an app that searches 10 nearby coffee shops from user input location. Need caffeine? Lets Coffee it up!</p>
                     </div>
                 </div>
             </div>
