new email and sass

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">HTML & CSS</h4>
+                    <h4 class="service-heading">HTML &amp; CSS</h4>
                     <p class="text-muted">The latest in markup language and visual presentation.</p>
                 </div>
                 <div class="col-md-4">
@@ -215,7 +215,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Ruby & Ruby on Rails</h4>
+                    <h4 class="service-heading">Ruby &amp; Ruby on Rails</h4>
                     <p class="text-muted">Full-stack web applications with ruby and streamlined database creation.</p>
                 </div>
                 <div class="col-md-4">
