--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/agency.css.scss" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -93,7 +93,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <h3 class="section-subheading text-muted">Full Stack Web Developer based in Washington DC.</h3>
-                </div>
+                </div>vg
             </div>
             <div class="row">
                 <div class="col-sm-12">
