--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <h3 class="section-subheading text-muted">Full Stack Web Developer based in Washington DC.</h3>
-                </div>vg
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
@@ -102,7 +102,7 @@
                         <h4>Andy Kim</h4>
                         <p class="text-muted">Web Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="http://www.twitter.com/alienk703"><i class="fa fa-twitter"></i></a>
+                            <li><a href="http://www.twitter.com/kimandy703"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="https://github.com/alienk703"><i class="fa fa-github-alt"></i></a>
                             </li>
@@ -234,7 +234,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <a href="mailto:alienk703@gmail.com"><h2 class="section-heading">Contact Andy</h2></a>
+                    <a href="mailto:kimandy703@gmail.com"><h2 class="section-heading">Contact Andy</h2></a>
                     <h3 class="section-subheading text-muted">I am currently looking for work in Washington DC Area. <br>If you are interested in my work, or just want to chat about cool things over coffee,<br>contact me!</h3>
                 </div>
             </div>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="http://www.twitter.com/alienk703"><i class="fa fa-twitter"></i></a>
+                        <li><a href="http://www.twitter.com/kimandy703"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="https://github.com/alienk703"><i class="fa fa-github-alt"></i></a>
                         </li>
