--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/agency.css.scss" rel="stylesheet">
+<!--     <link href="css/agency.css" rel="stylesheet"> -->
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -98,7 +99,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="team-member">
-                        <img src="img/team/aboutmesq.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/aboutmesq.jpg" class="img-circle" alt="">
                         <h4>Andy Kim</h4>
                         <p class="text-muted">Web Developer</p>
                         <ul class="list-inline social-buttons">
@@ -171,11 +172,11 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>FlyFreely</h4>
-                        <p class="text-muted">FlyFreely is an app that picks out a random airport for you and gives you the price and flight information for the destination. Perfect for users who have the time, but need help deciding where to go.</p>
+                        <p class="text-muted">FlyFreely is an app that picks out a random destination for you and gives you the price and flight information. Perfect for users who have the time, but need help deciding where to go.</p>
                     </div>
                 </div>
                   <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://coffeeing.herokuapp.com/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://coffeesquirrel.herokuapp.com/" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -184,8 +185,8 @@
                         <img src="img/portfolio/coffeeing.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Coffeeing</h4>
-                        <p class="text-muted">Coffeeing is an app that searches 10 nearby coffee shops from user input location. Need caffeine? Lets Coffee it up!</p>
+                        <h4>Coffee Squirrel</h4>
+                        <p class="text-muted">Coffee Squirrel is an app that fetches 10 nearby coffee shops from user input location. Need caffeine? Lets Coffee it up!</p>
                     </div>
                 </div>
             </div>
@@ -202,7 +203,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
@@ -210,7 +211,7 @@
                     <h4 class="service-heading">HTML &amp; CSS</h4>
                     <p class="text-muted">The latest in markup language and visual presentation.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
@@ -218,13 +219,21 @@
                     <h4 class="service-heading">Ruby &amp; Ruby on Rails</h4>
                     <p class="text-muted">Full-stack web applications with ruby and streamlined database creation.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-jsfiddle fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">JavaScript</h4>
                     <p class="text-muted">Front End foundations, animations, and lightweight frameworks.</p>
+                </div>
+                 <div class="col-md-3">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-photo fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Photoshop &amp; Illustrator </h4>
+                    <p class="text-muted">Advance Photoshop and Illustrator works to manipulate photo or create original svg vector image.</p>
                 </div>
             </div>
         </div>
@@ -254,7 +263,7 @@
                         </li>
                         <li><a href="https://github.com/alienk703"><i class="fa fa-github-alt"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/alienk703"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/kimandy703"><i class="fa fa-linkedin"></i></a>
                         </li>
                         <li><a href="andykim_resume_112014.pdf"><i class="fa fa-file-text"></i></a>
                         </li>
