--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/agency.css.scss" rel="stylesheet">
-<!--     <link href="css/agency.css" rel="stylesheet"> -->
+    <link href="css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
