img files cleaned up

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/coffeeing.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/coffeesquirrel.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Coffee Squirrel</h4>
@@ -247,7 +247,6 @@
                     <h3 class="section-subheading text-muted">I am currently looking for work in Washington DC Area. <br>If you are interested in my work, or just want to chat about cool things over coffee,<br>contact me!</h3>
                 </div>
             </div>
-   
         </div>
     </section>
 
