--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Hello! My name is Andy</div>
                 <div class="intro-heading">And I make Websites</div>
-                <a href="#aboutme" class="page-scroll btn btn-xl">Check Meowt!</a>
+                <a href="#aboutme" class="page-scroll btn-xl">Check Meowt!</a>
             </div>
         </div>
     </header>
