link open in new window

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://petstargram.herokuapp.com/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://petstargram.herokuapp.com/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://github.com/alienk703/dwellwell" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/alienk703/dwellwell" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://flyfreely.herokuapp.com/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://flyfreely.herokuapp.com/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                   <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://coffeesquirrel.herokuapp.com/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://coffeesquirrel.herokuapp.com/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
