new window for all links

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                         <h4>Andy Kim</h4>
                         <p class="text-muted">Web Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="http://www.twitter.com/kimandy703"><i class="fa fa-twitter"></i></a>
+                            <li><a href="http://www.twitter.com/kimandy703" target="_blank"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://github.com/alienk703"><i class="fa fa-github-alt"></i></a>
+                            <li><a href="https://github.com/alienk703" target="_blank"><i class="fa fa-github-alt"></i></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/alienk703"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.linkedin.com/in/kimandy703" target="_blank"><i class="fa fa-linkedin"></i></a>
                             </li>
-                            <li><a href="andykim_resume_112014.pdf"><i class="fa fa-file-text"></i></a>
+                            <li><a href="andykim_resume_112014.pdf" target="_blank"><i class="fa fa-file-text"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -258,13 +258,13 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="http://www.twitter.com/kimandy703"><i class="fa fa-twitter"></i></a>
+                        <li><a href="http://www.twitter.com/kimandy703" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://github.com/alienk703"><i class="fa fa-github-alt"></i></a>
+                        <li><a href="https://github.com/alienk703" target="_blank"><i class="fa fa-github-alt"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/kimandy703"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/kimandy703" target="_blank"><i class="fa fa-linkedin"></i></a>
                         </li>
-                        <li><a href="andykim_resume_112014.pdf"><i class="fa fa-file-text"></i></a>
+                        <li><a href="andykim_resume_112014.pdf" target="_blank"><i class="fa fa-file-text"></i></a>
                         </li>
                     </ul>
                 </div>
