--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
  <!-- Codepen Section -->
-    <section id="codepen">
+<!--     <section id="codepen">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -221,7 +221,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Skills Section -->
     <section id="skills">
