--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </section>
 
  <!-- Codepen Section -->
-<!--     <section id="codepen">
+    <section id="codepen">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -218,7 +218,7 @@
                 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Skills Section -->
     <section id="skills" class="bg-light-gray">
