--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </section>
 
  <!-- Codepen Section -->
-    <section id="codepen" class="bg-gray">
+    <section id="codepen" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
