--- a/index.html
+++ b/index.html
@@ -270,8 +270,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <a href="mailto:kimandy703@gmail.com"><h2 class="section-heading">Contact Andy</h2></a>
-                    <h3 class="section-subheading text-muted">I am currently looking for work in Washington DC Area. <br>If you are interested in my work, or just want to chat about cool things over coffee,<br>contact me!</h3>
+                    <div class="contact-me">
+                        <a href="mailto:kimandy703@gmail.com"><h2 class="section-heading">Contact Andy</h2></a>
+                        <h3 class="section-subheading text-muted">I am currently looking for work in Washington DC Area. <br>If you are interested in my work, or just want to chat about cool things over coffee,<br>contact me!</h3>
+                    </div>
                 </div>
             </div>
         </div>
