--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                 <span class="copyright">Copyright &copy; Andy Kim WebDev 2014</span>
+                 <span class="copyright">Andy Kim WebDev 2014</span>
                 </div>
             </div>
         </div>
