--- a/index.html
+++ b/index.html
@@ -4,6 +4,104 @@
 	<title></title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="animate.css">
+<script src="snap.svg-min.js"></script>
+
+		<style>
+			
+
+			
+			@-webkit-keyframes breeze{
+				0% {
+					-webkit-transform: rotate(0deg);
+				}
+				50% {
+					-webkit-transform: rotate(10deg);
+				}
+				100% {
+					-webkit-transform: rotate(0deg);
+				}
+			}
+			
+			@-moz-keyframes breeze{
+				0% {
+					-moz-transform: rotate(0deg);
+				}
+				50% {
+					-moz-transform: rotate(10deg);
+				}
+				100% {
+					-moz-transform: rotate(0deg);
+				}
+			}
+			
+			@-webkit-keyframes needle{
+				0% {
+					-webkit-transform: rotate(0deg);
+				}
+				50% {
+					-webkit-transform: rotate(-5deg);
+				}
+				100% {
+					-webkit-transform: rotate(0deg);
+				}
+			}
+			
+			@-moz-keyframes needle{
+				0% {
+					-moz-transform: rotate(0deg);
+				}
+				50% {
+					-moz-transform: rotate(10deg);
+				}
+				100% {
+					-moz-transform: rotate(0deg);
+				}
+			}
+			
+			@-webkit-keyframes bubble {
+			  from {
+			    margin-left: 100%;
+			    width: 300%; 
+			  }
+
+			  to {
+			    margin-left: 0%;
+			    width: 100%;
+			  }
+			}
+
+			
+			.flame {
+				-webkit-transform-origin: 40% 100%;
+				-webkit-animation: breeze 0.5s ease-out infinite;
+				-moz-transform-origin: 50% bottom;
+				/*-moz-animation: breeze 2s ease-out infinite;*/
+			}
+			
+			.tree .face.animating .eye{
+				-webkit-transform: scale(1, 1);
+				-moz-transform: scale(1, 1);
+			}
+			
+			circle {
+				-webkit-animation: bubble 5s infinite;
+				-moz-animation: bubble 5s infinite;
+			}
+			
+			.face.animating .mouth{
+				-webkit-animation: talk 1s infinite;
+				-moz-animation: talk 1s infinite;
+			}
+			
+			.needle {
+				-webkit-transform-origin: 0% 100%;
+				-webkit-animation: needle 1s ease-out infinite;
+				-moz-transform-origin: 10% bottom;
+			}
+		</style>
+
+
 <body>
 	
 <?xml version="1.0" encoding="utf-8"?>
@@ -4496,13 +4594,14 @@
 			</g>
 			<circle fill="#32AFA0" cx="375.6" cy="780.9" r="4.1"/>
 			<circle fill="#32AFA0" cx="387" cy="770.3" r="3.4"/>
-			<circle fill="#32AFA0" cx="366.8" cy="753.8" r="9.6"/>
-			<circle fill="#95D3C1" cx="381.5" cy="741.5" r="6.4"/>
+			<circle id="shake" class="shake" fill="#32AFA0" cx="366.8" cy="753.8" r="9.6"/>
+			<circle fill="#95D3C1" cx="381.5" cy="741.5" r="6.4" />
+			
 			<circle fill="#32AFA0" cx="371.9" cy="726.6" r="2.8"/>
 		</g>
 		<g>
 			<g>
-				<path fill="#00B3CD" d="M673.5,240.5l-3.4-5.9v-61.8h2.7c2.1,0,3.9-1.8,3.9-3.9c0-2.1-1.8-3.9-3.9-3.9h-39.2
+				<path class="wobble" id="wobble" fill="#00B3CD" d="M673.5,240.5l-3.4-5.9v-61.8h2.7c2.1,0,3.9-1.8,3.9-3.9c0-2.1-1.8-3.9-3.9-3.9h-39.2
 					c-2.1,0-3.9,1.8-3.9,3.9c0,2.1,1.8,3.9,3.9,3.9h2.7v62l-3.4,5.9c-20.8,8.2-35.7,28.4-35.7,52c0,17.8,8.2,33.6,21.1,43.7h69.4
 					c12.8-10.3,21.1-25.9,21.1-43.7C709.1,268.9,694.3,248.7,673.5,240.5z"/>
 				<g>
@@ -4521,7 +4620,7 @@
 			</g>
 			<circle fill="#F6F2E7" cx="646.9" cy="320.4" r="3.4"/>
 			<circle fill="#F6F2E7" cx="660.4" cy="304.6" r="5.3"/>
-			<circle fill="#F6F2E7" cx="642.5" cy="291.8" r="9.1"/>
+			<circle id="flash shake" class="flash shake" fill="#F6F2E7" cx="642.5" cy="291.8" r="9.1"/>
 			<circle fill="#F6F2E7" cx="636.6" cy="269.1" r="1.4"/>
 			<circle fill="#F6F2E7" cx="655.3" cy="254.5" r="4.1"/>
 			<circle fill="#F6F2E7" cx="655.6" cy="278.3" r="3.4"/>
@@ -4580,8 +4679,10 @@
 						z"/>
 				</g>
 			</g>
+			<g id='flame' class='flame'>
 			<path fill="#F37983" d="M372.4,874.3c0,0,14.2-6.6,14.2-25.9c0-19.2-17-27.3-17.6-35.3c1.4,11.4-3.6,21.7-8.3,28.9
 				C352,855.1,362,874.3,372.4,874.3z"/>
+			</g>
 		</g>
 		<g>
 			<path fill="#2F576C" d="M503.8,993.6c0,3,2.5,5.5,5.5,5.5l0,0c3,0,5.5-2.5,5.5-5.5V566.8c0-3-2.5-5.5-5.5-5.5l0,0
@@ -4798,7 +4899,7 @@
 				<path fill="#1D4866" d="M621.2,681.3c-0.4,0.9-0.7,1.6-1.1,2.5l10.8,4.4c0.4-0.9,0.7-1.8,1.1-2.5L621.2,681.3z"/>
 				<path fill="#F37983" d="M718.5,724.6c0.4-0.9,0.7-1.6,1.1-2.5l-10.7-4.4c-0.4,0.9-0.7,1.8-1.1,2.5L718.5,724.6z"/>
 			</g>
-			<g>
+			<g id="needle" class="needle">
 				<path fill="#E35F75" d="M686.7,681.7c1.4,2,3.9,5.1,5.7,6.6l-21.8,15.4c-0.9-0.5-2.1-0.4-3,0.2c-0.9,0.7-1.2,1.6-1.2,2.7
 					l-13,9.1c-1.4-0.9-3.2-0.9-4.6,0c-1.8,1.2-2.3,3.7-1.1,5.7c1.2,1.8,3.7,2.3,5.7,1.1c1.4-1.1,2-2.7,1.6-4.3l13-9.1
 					c0.9,0.5,2.1,0.4,3-0.2c0.9-0.7,1.2-1.6,1.2-2.7l21.8-15.3c0.7,2,2.7,5.1,4.3,7.5c0.7-9.6,7.8-17.8,7.8-17.8
