--- a/index3.html
+++ b/index3.html
@@ -13,7 +13,7 @@
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,700italic' rel='stylesheet' type='text/css'>
 <body>
  <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="container" style="margin-right:0px; margin-left:0px;">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">audio player?</a>
+                <p class="location">Washington&nbsp;&nbsp;|&nbsp;&nbsp;DC&nbsp;&nbsp;|&nbsp;&nbsp;kimandy703@gmail.com</p>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,11 +47,6 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <ul class="nav">
-                     <li class="location">
-                        Washington&nbsp;&nbsp;|&nbsp;&nbsp;DC&nbsp;&nbsp;|&nbsp;&nbsp;kimandy703@gmail.com</a>
-                    </li>
-                </ul>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
@@ -68,9 +63,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 greeting">
-				<h1>ANDY KIM</h1>
+				<img src="img/ak_logo.png">
 			</div>
-			<div class="col-lg-8 greeting">
+			<div class="col-lg-8 intro">
 				<h1>ANDY KIM/</h1>
 				<h1>WEB DESIGN</h1>
 				<h3>Front-end Developer/Web & Interactive Desinger</h4>
