--- a/index3.html
+++ b/index3.html
@@ -54,10 +54,14 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <div class="bgfilter">
+	</div>
+
 	
 	<div class="videobg" style="width: 100%; height: 650px; margin;0;position: absolute;"
 	    data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
 	</div>
+
 
 
 	<div class="container">
