styling and isotope git push

--- a/index3.html
+++ b/index3.html
@@ -13,7 +13,7 @@
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,700italic' rel='stylesheet' type='text/css'>
 <body>
  <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container" style="margin-right:0px; margin-left:0px;">
+        <div class="container-fluid" style="margin-right:0px; margin-left:0px;">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -54,12 +54,16 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
     <div class="bgfilter">
 	</div>
 
-	
-	<div class="videobg" style="width: 100%; height: 650px; margin;0;position: absolute;"
-	    data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
+	<div class="container">
+		<div class="row">
+			<div class="videobg" style="width: 100%; height: 650px; margin;0;position: absolute;"
+			    data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
+			</div>
+		</div>
 	</div>
 
 
@@ -70,6 +74,33 @@
 				<img src="img/ak_logo.png">
 			</div>
 			<div class="col-lg-8 intro">
+				<h1>ANDY KIM/</h1>
+				<h1>WEB DESIGN</h1>
+				<h3>Front-end Developer/Web &#38; Interactive Desinger</h3>
+			</div>
+			<div class="col-lg-8 intro2">
+				<h2>DEVELOP/DESIGN</h2>
+				<h4><strong>HTML/CSS</strong></h4>
+				<h4><strong>Javascript/Jquery</strong></h4>
+				<h4><strong>Responsive</strong></h4>
+				<h4><strong>WordPress</strong></h4>
+				<h4><strong>Wireframe</strong></h4>
+				<h4><strong>Adobe CC</strong></h4>
+
+			</div>
+		</div>
+	</div>
+
+	<div class="bgfilterlow">
+	</div>
+
+	<div class="lowerbg">
+		<img src="img/lowerbg.png">
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 intro">
 				<h1>ANDY KIM/</h1>
 				<h1>WEB DESIGN</h1>
 				<h3>Front-end Developer/Web & Interactive Desinger</h4>
