--- a/index3.html
+++ b/index3.html
@@ -53,12 +53,12 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <div class="bgfilter">
+<!--     <div class="bgfilter">
+	</div> -->
+
+
+	<div style="width: 100%; height: 1850px; margin;0;position: absolute;"data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
 	</div>
-
-
-			<div style="width: 100%; height: 850px; margin;0;position: absolute;"data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
-			</div>
 
 
 
