--- a/index3.html
+++ b/index3.html
@@ -57,7 +57,7 @@
 	</div> -->
 
 
-	<div style="width: 100%; height: 1850px; margin;0;position: absolute;"data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
+	<div class="videobg" data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
 	</div>
 
 
@@ -97,16 +97,16 @@
 		</div>
 	</div>
 
-<!-- 	<div class="bgfilterlow">
+	<div class="bgfilterlow">
 	</div>
- -->
-	<div class="lowerbg">
+
+<!-- 	<div class="lowerbg">
 		<img src="img/lowerbg.png">
 	</div>
-
+ -->
 
 <!-- ISOTOPE -->
-	<div class="container">
+	<div class="container projects">
 		<div class="row">
 			<div class="col-lg-12">
                 <h1>Isotope - filtering &amp; sorting</h1>
