--- a/index3.html
+++ b/index3.html
@@ -53,9 +53,9 @@
   			</div>
   			<div class="col-lg-8 intro">
           <div>
-      			<h1>ANDY KIM/</h1>
-      			<h1>WEB DESIGN</h1>
-      			<h3>Front-end Developer/Web &#38; Interactive Desinger</h3>
+      			<h1 style="font-weight: bold;">ANDY KIM /</h1>
+      			<h1 style="margin-top: 0px; font-weight: bold;">WEB DESIGN</h1>
+      			<h3 style="margin-top: 0px;">Front-end Developer / Web &#38; Interactive Desinger</h3>
           </div>
           <div class="intro2">
             <h2>DEVELOP/DESIGN</h2>
@@ -67,7 +67,7 @@
             <h4><strong>Adobe CC</strong></h4>
           </div>
   			</div>
-  <!-- 	<div class="col-lg-8 intro2">
+        <!--div class="col-lg-8 intro2">
   				<h2>DEVELOP/DESIGN</h2>
   				<h4><strong>HTML/CSS</strong></h4>
   				<h4><strong>Javascript/Jquery</strong></h4>
