--- a/index3.html
+++ b/index3.html
@@ -27,13 +27,13 @@
             <a href="#page-top"></a>
           </li>
           <li>
-            <a class="page-scroll" href="#page-top">Top</a>
+            <a class="menubutton" href="#page-top">Top</a>
           </li>
           <li>
-            <a class="page-scroll" href="#projects">Projects</a>
+            <a class="menubutton" href="#projects">Projects</a>
           </li>
           <li>
-            <a class="page-scroll" href="#contact">Contact</a>
+            <a class="menubutton" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -56,6 +56,7 @@
       			<h1 style="font-weight: bold;">ANDY KIM /</h1>
       			<h1 style="margin-top: 0px; font-weight: bold;">WEB DESIGN</h1>
       			<h3 style="margin-top: 0px;">Front-end Developer / Web &#38; Interactive Desinger</h3>
+            <h4 style="margin-top: 40px;">Full stack developer and design enthusiast with a sensitivity to the user experience. Creative technologist who inspires and motivates others to achieve success. Laser-focused commitment to meet and exceed goals to develop responsive and functional web applications.</h4>
           </div>
           <div class="intro2">
             <h2>DEVELOP/DESIGN</h2>
@@ -93,10 +94,10 @@
 		<div class="row">
 			<div class="col-lg-12 col-centered">
         <h1>PROJECTS</h1>
-        <div id="filters" class="button-group">  <button class="button is-checked" data-filter="*">show all</button>
-          <button class="button" data-filter=".design">Design</button>
-          <button class="button" data-filter=".web">Web</button>
-          <button class="button" data-filter=".htmlemail">HTML Email</button>
+        <div id="filters" class="isobutton-group">  <div class="isobutton is-checked" data-filter="*">Show All</div>
+          <div class="isobutton" data-filter=".design">Design</div>
+          <div class="isobutton" data-filter=".web">Web</div>
+          <div class="isobutton" data-filter=".htmlemail">HTML Email</div>
   <!--              <button class="button" data-filter=":not(.transition)">not transition</button>
           <button class="button" data-filter=".metal:not(.transition)">metal but not transition</button>
           <button class="button" data-filter="numberGreaterThan50">number > 50</button>
