--- a/index3.html
+++ b/index3.html
@@ -13,19 +13,10 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid" style="margin-right:0px; margin-left:0px;">
       <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <p class="location">Washington&nbsp;&nbsp;|&nbsp;&nbsp;DC&nbsp;&nbsp;|&nbsp;&nbsp;kimandy703@gmail.com</p>
+        <p class="location">Washington&nbsp;&nbsp;|&nbsp;&nbsp;DC</p>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div>
         <ul class="nav menus">
-          <li class="hidden">
-            <a href="#page-top"></a>
-          </li>
           <li>
             <a class="menubutton" href="#page-top">Top</a>
           </li>
@@ -36,6 +27,24 @@
             <a class="menubutton" href="#contact">Contact</a>
           </li>
         </ul>
+
+        <div class="ssn-menu">
+          <a href="#">
+            <div class="twitter"></div>
+          </a>
+          <a href="#">
+            <div class="facebook"></div>
+          </a>
+          <a href="#">
+            <div class="linkedin"></div>
+          </a>
+          <a href="#">
+            <div class="github"></div>
+          </a>
+          <a href="#">
+            <div class="email"></div>
+          </a>
+        </div>
       </div>
     </div>
   </nav>
