--- a/index3.html
+++ b/index3.html
@@ -29,19 +29,19 @@
         </ul>
 
         <div class="ssn-menu">
-          <a href="#">
+          <a href="https://twitter.com/kimandy703" target="_blank">
             <div class="twitter"></div>
           </a>
-          <a href="#">
+<!--           <a href="">
             <div class="facebook"></div>
-          </a>
-          <a href="#">
+          </a> -->
+          <a href="https://www.linkedin.com/in/kimandy703" target="_blank">
             <div class="linkedin"></div>
           </a>
-          <a href="#">
+          <a href="https://github.com/alienk703" target="_blank">
             <div class="github"></div>
           </a>
-          <a href="#">
+          <a href="mailto:kimandy703@gmail.com">
             <div class="email"></div>
           </a>
         </div>
