--- a/index3.html
+++ b/index3.html
@@ -102,7 +102,7 @@
 	<div class="container" id="projects">
 		<div class="row">
 			<div class="col-lg-12 col-centered">
-        <h1>PROJECTS</h1>
+        <h1><strong>PROJECTS</strong></h1>
         <div id="filters" class="isobutton-group">  <div class="isobutton is-checked" data-filter="*">Show All</div>
           <div class="isobutton" data-filter=".design">Design</div>
           <div class="isobutton" data-filter=".web">Web</div>
@@ -123,7 +123,7 @@
         </div>
   -->
         <div class="isotope">
-          <div class="element-item design " data-category="design">
+          <div class="element-item design" data-category="design">
             <a href="#">
                 <img src="http://placekitten.com/g/200/300">
             </a>
