portfolio images done

--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -175,18 +175,22 @@
 		  <div class="element-item website" data-category="alkali">
 		    <img src="assets/images/dearabby.png">
 		  </div>
-		  <div class="element-item htmlemail" data-category="transition">
-		    <h3 class="name">Cadmium</h3>
-		    <p class="symbol">Cd</p>
-		    <p class="number">48</p>
-		    <p class="weight">112.411</p>
+		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		    <img src="assets/images/nagb_history.png">
 		  </div>
 		  <div class="element-item htmlemail" data-category="alkaline-earth">
-		    <h3 class="name">Calcium</h3>
-		    <p class="symbol">Ca</p>
-		    <p class="number">20</p>
-		    <p class="weight">40.078</p>
+		    <img src="assets/images/nagb_ss.png">
 		  </div>
+		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		    <img src="assets/images/mfan.png">
+		  </div>
+		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		    <img src="assets/images/acaai.png">
+		  </div>
+		  		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		    <img src="assets/images/explore_va.png">
+		  </div>
+
 		</div>
 	</div>
 </section>
