portfolio page updated

--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -164,31 +164,49 @@
 		    <img src="assets/images/prvven.png">
 		  </div>
 		  <div class="element-item website" data-category="post-transition">
-		    <img src="assets/images/petstargram.png">
+		    <a href="http://petstargram.herokuapp.com" target="_blank">
+		      <img src="assets/images/petstargram.png">
+		    </a>
 		  </div>
 		  <div class="element-item website" data-category="transition">
-		    <img src="assets/images/travelion.png">
+		  	<a href="http://travelion.herokuapp.com/" target="_blank">
+		    	<img src="assets/images/travelion.png">
+		    </a>
 		  </div>
 		  <div class="element-item website" data-category="alkali">
-		    <img src="assets/images/cs.png">
+		  	<a href="http://coffeesquirrel.herokuapp.com/" target="_blank">
+		    	<img src="assets/images/cs.png">
+		    </a>
 		  </div>
 		  <div class="element-item website" data-category="alkali">
-		    <img src="assets/images/dearabby.png">
+		    <a href="https://dearabby.sites.usa.gov/" target="_blank">
+		      <img src="assets/images/dearabby.png">
+		    </a>
 		  </div>
 		  <div class="element-item htmlemail" data-category="alkaline-earth">
-		    <img src="assets/images/nagb_history.png">
+		    <a href="portfolio/nagb_history.html" target="_blank">
+		      <img src="assets/images/nagb_history.png">
+		    </a>  
 		  </div>
 		  <div class="element-item htmlemail" data-category="alkaline-earth">
-		    <img src="assets/images/nagb_ss.png">
+		    <a href="portfolio/nagb_ss.html" target="_blank">
+		      <img src="assets/images/nagb_ss.png">
+		    </a>  
 		  </div>
 		  <div class="element-item htmlemail" data-category="alkaline-earth">
-		    <img src="assets/images/mfan.png">
+		    <a href="portfolio/mfan.html" target="_blank">
+		      <img src="assets/images/mfan.png">
+		    </a>  
 		  </div>
 		  <div class="element-item htmlemail" data-category="alkaline-earth">
-		    <img src="assets/images/acaai.png">
+		    <a href="portfolio/acaai.html" target="_blank">
+		      <img src="assets/images/acaai.png">
+		    </a>  
 		  </div>
-		  		  <div class="element-item htmlemail" data-category="alkaline-earth">
-		    <img src="assets/images/explore_va.png">
+		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		    <a href="portfolio/va_explore.html" target="_blank">
+		      <img src="assets/images/explore_va.png">
+		    </a>  
 		  </div>
 
 		</div>
