design pdf added

--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -155,13 +155,19 @@
 		</div>
 		<div class="grid">
 		  <div class="element-item design " data-category="transition">
-		    <img src="assets/images/dwellwell.png">
+		    <a href="portfolio/dwellwell_ak.pdf" target="_blank">
+		      <img src="assets/images/dwellwell.png">
+		    </a>  
 		  </div>
 		  <div class="element-item design " data-category="metalloid">
-		    <img src="assets/images/weather_alarm.png">
+			  <a href="portfolio/weather_alarm_ak.pdf" target="_blank">
+			    <img src="assets/images/weather_alarm.png">
+			  </a>
 		  </div>
 		  <div class="element-item design" data-category="post-transition">
-		    <img src="assets/images/prvven.png">
+			  <a href="portfolio/prvven_ak.pdf" target="_blank">
+			    <img src="assets/images/prvven.png">
+			  </a>
 		  </div>
 		  <div class="element-item website" data-category="post-transition">
 		    <a href="http://petstargram.herokuapp.com" target="_blank">
