ease in bug fix

--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -154,62 +154,62 @@
 		  <button class="button" data-filter=".htmlemail">HTML EMAIL</button>
 		</div>
 		<div class="grid">
-		  <div class="element-item design " data-category="transition">
+		  <div class="element-item design " >
 		    <a href="portfolio/dwellwell_ak.pdf" target="_blank">
 		      <img src="assets/images/dwellwell.png">
 		    </a>  
 		  </div>
-		  <div class="element-item design " data-category="metalloid">
+		  <div class="element-item design " >
 			  <a href="portfolio/weather_alarm_ak.pdf" target="_blank">
 			    <img src="assets/images/weather_alarm.png">
 			  </a>
 		  </div>
-		  <div class="element-item design" data-category="post-transition">
+		  <div class="element-item design" >
 			  <a href="portfolio/prvven_ak.pdf" target="_blank">
 			    <img src="assets/images/prvven.png">
 			  </a>
 		  </div>
-		  <div class="element-item website" data-category="post-transition">
+		  <div class="element-item website" >
 		    <a href="http://petstargram.herokuapp.com" target="_blank">
 		      <img src="assets/images/petstargram.png">
 		    </a>
 		  </div>
-		  <div class="element-item website" data-category="transition">
+		  <div class="element-item website" >
 		  	<a href="http://travelion.herokuapp.com/" target="_blank">
 		    	<img src="assets/images/travelion.png">
 		    </a>
 		  </div>
-		  <div class="element-item website" data-category="alkali">
+		  <div class="element-item website">
 		  	<a href="http://coffeesquirrel.herokuapp.com/" target="_blank">
 		    	<img src="assets/images/cs.png">
 		    </a>
 		  </div>
-		  <div class="element-item website" data-category="alkali">
+		  <div class="element-item website">
 		    <a href="https://dearabby.sites.usa.gov/" target="_blank">
 		      <img src="assets/images/dearabby.png">
 		    </a>
 		  </div>
-		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		  <div class="element-item htmlemail">
 		    <a href="portfolio/nagb_history.html" target="_blank">
 		      <img src="assets/images/nagb_history.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		  <div class="element-item htmlemail">
 		    <a href="portfolio/nagb_ss.html" target="_blank">
 		      <img src="assets/images/nagb_ss.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		  <div class="element-item htmlemail" >
 		    <a href="portfolio/mfan.html" target="_blank">
 		      <img src="assets/images/mfan.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		  <div class="element-item htmlemail">
 		    <a href="portfolio/acaai.html" target="_blank">
 		      <img src="assets/images/acaai.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail" data-category="alkaline-earth">
+		  <div class="element-item htmlemail">
 		    <a href="portfolio/va_explore.html" target="_blank">
 		      <img src="assets/images/explore_va.png">
 		    </a>  
