--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -61,11 +61,8 @@
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#home">Home</a></li>
-						<li><a href="#services">Services</a></li>
+						<li><a href="#services">About</a></li>
                         <li><a href="#portfolio">Works</a></li>
-                        <li><a href="#skills">Skills</a></li>
-						<li><a href="#testimonials">Testimonials</a></li>
-						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -372,7 +369,7 @@
 
 
 <!-- Contact start -->
-	<section id="contact" class="pfblock">
+<!-- 	<section id="contact" class="pfblock">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-sm-offset-3">
@@ -407,7 +404,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 <!-- Contact end -->
 
 <!-- Footer start -->
@@ -416,17 +413,17 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<ul class="social-links">
-						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/kimandy703" target="_blank" class="wow fadeInUp"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://twitter.com/kimandy703" target="_blank" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://github.com/alienk703" target="_blank" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-github"></i></a></li>
+						<li><a href="portfolio/ak_resume_2015.pdf" target="_blank" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-file-text"></i></a></li>
+						<li><a href="mailto:kimandy703@gmail.com" target="_blank" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 					<!-- <p class="heart">
                         Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
                     </p> -->
                     <p class="copyright">
-                        © 2015 Andy Kim | Images: <a href="https://unsplash.com/" tarbet="_blank">Unsplash</a> & <a href="http://zoomwalls.com/" tarbet="_blank">Zoomwalls</a>
+                        © 2015 Andy Kim | Header image from <a href="https://unsplash.com/" target="_blank">Unsplash</a>
 					</p>
 				</div>
 			</div>
