--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -79,7 +79,8 @@
 						<h2 class="pfblock-title">ANDY KIM <span>Web Design</span></h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							I'm a designer and developer from Washington, DC. Currently a Web Designer for Reingold.
+							<p>I'm a designer and developer from Washington, DC. <br/>Currently a Web Designer for <a href="http://reingold.com/" target="_blank">Reingold</a>.</p>
+							<<p>Download my Resume</p>
 						</div>
 					</div>
 				</div>
