--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 							<span class="icon-screen-desktop"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Web Design</h3>
+							<h3 class="iconbox-title">Digital Design</h3>
 							<div class="iconbox-desc">
-								Design for the web including HTML emails, social network designs, web banners, and webpages. Design that is simple, modern, responsive and fast.
+								Design for the digital media including HTML emails, social network designs, web banners, and webpages. Design that is simple, modern, responsive and fast.
 							</div>
 						</div>
 					</div>
