--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Digital Design</h3>
 							<div class="iconbox-desc">
-								Design for the digital media including HTML emails, social network designs, web banners, and webpages. Design that is simple, modern, responsive and fast.
+								Design for the digital media including HTML emails, social network designs, web banners, webpages and more. Design that is simple, modern, responsive and fast.
 							</div>
 						</div>
 					</div>
