--- a/index.html
+++ b/index.html
@@ -151,14 +151,15 @@
 		  <button class="button" data-filter=".design">DESIGN</button>
 		  <button class="button" data-filter=".website">WEBSITES</button>
 		  <button class="button" data-filter=".htmlemail">HTML EMAIL</button>
+		  <button class="button" data-filter=".events">SPECIAL EVENTS</button>
 		</div>
 		<div class="grid">
-		  <div class="element-item design " >
+		  <div class="element-item design" >
 		    <a href="portfolio/dwellwell_ak.pdf" target="_blank">
 		      <img src="assets/images/dwellwell.png">
 		    </a>  
 		  </div>
-		  <div class="element-item design " >
+		  <div class="element-item design" >
 			  <a href="portfolio/weather_alarm_ak.pdf" target="_blank">
 			    <img src="assets/images/weather_alarm.png">
 			  </a>
@@ -211,6 +212,11 @@
 		  <div class="element-item htmlemail">
 		    <a href="portfolio/va_explore.html" target="_blank">
 		      <img src="assets/images/explore_va.png">
+		    </a>  
+		  </div>
+		  <div class="element-item htmlemail">
+		    <a href="producer.html" target="_blank">
+		      <img src="assets/images/events.png">
 		    </a>  
 		  </div>
 
