--- a/producer.html
+++ b/producer.html
@@ -48,9 +48,9 @@
 				</div>
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#services">About</a></li>
-                        <li><a href="#portfolio">Works</a></li>
+						<li><a href="index.html#home">Home</a></li>
+						<li><a href="index.html#services">About</a></li>
+                        <li><a href="index.html#portfolio">Works</a></li>
                         <li><a href="index_1.0.html">Previous Version</a></li>
 					</ul>
 				</div>
