--- a/producer.html
+++ b/producer.html
@@ -61,9 +61,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/amway_1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/amway_2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/amway_3.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/amway_1.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/amway_2.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/amway_3.jpeg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
@@ -81,9 +81,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/kwn_1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/kwn_2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/kwn_4.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/kwn_1.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/kwn_2.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/kwn_4.jpeg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
@@ -101,9 +101,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/hp_1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/hp_2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/hp_3.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/hp_1.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/hp_2.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/hp_3.jpeg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
