--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		      <img src="assets/images/explore_va.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail">
+		  <div class="element-item events">
 		    <a href="producer.html" target="_blank">
 		      <img src="assets/images/events.png">
 		    </a>  
