--- a/portfolio/weatheralarm.html
+++ b/portfolio/weatheralarm.html
@@ -108,7 +108,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="iconbox wow slideInLeft">
-						<img src="../assets/images/weatheralarm/mock_1).jpg">
+						<img src="../assets/images/weatheralarm/mock_1.jpg">
 					</div>
 				</div>
 			</div>
