--- a/portfolio/weatheralarm.html
+++ b/portfolio/weatheralarm.html
@@ -56,16 +56,16 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">ANDY</a>
+					<a class="navbar-brand" href="../index.html">ANDY</a>
 				</div>
-				<div class="collapse navbar-collapse" id="custom-collapse">
+				<!-- <div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#home">Home</a></li>
 						<li><a href="#services">About</a></li>
                         <li><a href="#portfolio">Works</a></li>
                         <li><a href="index_1.0.html">Previous Version</a></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</nav>
 	</header>
