--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		    </a>  
 		  </div>
 		  <div class="element-item design" >
-			  <a href="portfolio/weatheralarm.html" target="_blank">
+			  <a href="portfolio/weatheralarm.html">
 			    <img src="assets/images/weather_alarm.png">
 			  </a>
 		  </div>
