line brea fixed

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<span class="icon-rocket"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">HTML/CSS/<br/>Jquery/Javascript</h3>
+							<h3 class="iconbox-title">HTML/CSS/<br/>Jquery/<br class="break"/>Javascript</h3>
 							<div class="iconbox-desc">
 								Front-end web development using the latest HTML, CSS and other frame works such as Bootstrap and Foundation.
 							</div>
@@ -132,7 +132,7 @@
 							<span class="icon-picture"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Adobe Photshop/<br/>Illustrator/Dreamweaver</h3>
+							<h3 class="iconbox-title">Adobe Photshop/<br/>Illustrator/<br class="break2"/>Dreamweaver</h3>
 							<div class="iconbox-desc">
 								Adobe Creative Cloud proficiency 
 							</div>
