--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			    <img src="assets/images/prvven.png">
 			  </a>
 		  </div>
-		  <div class="element-item website" >
+<!-- 		  <div class="element-item website" >
 		    <a href="http://petstargram.herokuapp.com" target="_blank">
 		      <img src="assets/images/petstargram.png">
 		    </a>
@@ -178,7 +178,7 @@
 		  	<a href="http://travelion.herokuapp.com/" target="_blank">
 		    	<img src="assets/images/travelion.png">
 		    </a>
-		  </div>
+		  </div> -->
 		  <div class="element-item website">
 		  	<a href="http://coffeesquirrel.herokuapp.com/" target="_blank">
 		    	<img src="assets/images/cs.png">
@@ -189,14 +189,19 @@
 		      <img src="assets/images/dearabby.png">
 		    </a>
 		  </div>
+		  <div class="element-item website">
+		    <a href="http://reportingonsuicide.org/" target="_blank">
+		      <img src="assets/images/ros.png">
+		    </a>
+		  </div>
 		  <div class="element-item htmlemail">
 		    <a href="portfolio/nagb_history.html" target="_blank">
 		      <img src="assets/images/nagb_history.png">
 		    </a>  
 		  </div>
 		  <div class="element-item htmlemail">
-		    <a href="portfolio/nagb_ss.html" target="_blank">
-		      <img src="assets/images/nagb_ss.png">
+		    <a href="portfolio/reingold_webinar.html" target="_blank">
+		      <img src="assets/images/webinar.png">
 		    </a>  
 		  </div>
 		  <div class="element-item htmlemail" >
