--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		  <button class="button" data-filter=".design">DESIGN</button>
 		  <button class="button" data-filter=".website">WEBSITES</button>
 		  <button class="button" data-filter=".htmlemail">HTML EMAIL</button>
-		  <button class="button" data-filter=".events">SPECIAL EVENTS</button>
+<!-- 		  <button class="button" data-filter=".events">SPECIAL EVENTS</button> -->
 		</div>
 		<div class="grid">
 		  <div class="element-item design" >
@@ -169,6 +169,16 @@
 			    <img src="assets/images/prvven.png">
 			  </a>
 		  </div>
+		  <div class="element-item design" >
+			  <a href="portfolio/triplanner_1.0.pdf" target="_blank">
+			    <img src="assets/images/trplnr.png">
+			  </a>
+		  </div>
+		  <div class="element-item design" >
+			  <a href="portfolio/asbmt_mockup.pdf" target="_blank">
+			    <img src="assets/images/asbmt.png">
+			  </a>
+		  </div>
 <!-- 		  <div class="element-item website" >
 		    <a href="http://petstargram.herokuapp.com" target="_blank">
 		      <img src="assets/images/petstargram.png">
@@ -184,11 +194,11 @@
 		      <img src="assets/images/ros.png">
 		    </a>
 		  </div>
-		  <div class="element-item website">
+<!-- 		  <div class="element-item website">
 		  	<a href="http://coffeesquirrel.herokuapp.com/" target="_blank">
 		    	<img src="assets/images/cs.png">
 		    </a>
-		  </div>
+		  </div> -->
 		  <div class="element-item website">
 		    <a href="https://dearabby.sites.usa.gov/" target="_blank">
 		      <img src="assets/images/dearabby.png">
@@ -214,16 +224,16 @@
 		      <img src="assets/images/acaai.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail">
+<!-- 		  <div class="element-item htmlemail">
 		    <a href="portfolio/va_explore.html" target="_blank">
 		      <img src="assets/images/explore_va.png">
 		    </a>  
-		  </div>
-		  <div class="element-item events">
+		  </div> -->
+<!-- 		  <div class="element-item events">
 		    <a href="producer.html" target="_blank">
 		      <img src="assets/images/events.png">
 		    </a>  
-		  </div>
+		  </div> -->
 
 		</div>
 	</div>
