--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			  </a>
 		  </div>
 		  <div class="element-item design" >
-			  <a href="portfolio/asbmt_mockup.pdf" target="_blank">
+			  <a href="http://asbmt.org/" target="_blank">
 			    <img src="assets/images/asbmt.png">
 			  </a>
 		  </div>
