--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
 		</div>
 		<div class="grid">
 		  <div class="element-item design" >
-		    <a href="portfolio/dwellwell.html" >
+		    <a href="portfolio/dwellwell.html" target="_blank" >
 		      <img src="assets/images/dwellwell.png">
 		    </a>  
 		  </div>
 		  <div class="element-item design" >
-			  <a href="portfolio/weatheralarm.html">
+			  <a href="portfolio/weatheralarm.html" target="_blank">
 			    <img src="assets/images/weather_alarm.png">
 			  </a>
 		  </div>
