asbmt design iso

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			    <img src="assets/images/trplnr.png">
 			  </a>
 		  </div>
-		  <div class="element-item design" >
+		  <div class="element-item website" >
 			  <a href="http://asbmt.org/" target="_blank">
 			    <img src="assets/images/asbmt.png">
 			  </a>
